# git-semantic-similarity

./: README.md  cli.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  python-publish.yml
.gitsem/sentence-transformers_all-mpnet-base-v2/: embeddings.jsonl
src/: cli.py  embeddings.py
